css/main.css
/* ... */
.half-block-container {
  margin: 10px 0 70px;
  text-align: left;
}
.half-block-container>li, .half-block-container>div {
  /*width:50%;
	float:left;*/
}
#ak-radar-zone {
  margin: 70px 0 10px;
  padding-bottom: 30px;
}
#ak-dotted-circle {
  margin-top: 30px;
}
#ak-cellphone-14 {
  position: relative;
  margin-top: 30px;
  max-width: 150px;
  margin-left: -64%;
}
#head-txt-14 {
  margin-top: 50px;
  margin-bottom: 50px;
  font-size: 40px;
}
#many-more-team {
  margin-top: 20px
}
.side-icon {
  width: 90%;
  max-width: 300px;
  margin: 0 auto;
}
.user-comments {
  font-size: 1.0em;
  color: #888;
  max-width: 700px;
  margin: 30px auto 80px;
  min-height: 80px;
  font-size: 24px;
  font-family: gillsansmtpro;
}
#testimony-selector {
  width: 70%;
  max-width: 600px;
  margin: 10px auto;
}
.horz-select-span {
  width: 100%;
  max-width: 400px;
  margin: 0 auto;
  height: 1px;
  background: #bbb;
}
.horz-selected-span {
  width: 100%;
  max-width: 400px;
  margin: 30px auto 0;
  height: 2px;
}
.horz-selected-span>span {
  width: 10%;
  margin-top: -1px;
  height: 2px;
  display: block;
  background: #aaa;
}
.logos-box {
  margin-top: 30px;
}
.logos-box>li {
  width: 130px;
  display: inline-block;
  margin: 20px 20px;
}
.logos-box>li>img {
  width: 100%;
  opacity: 1;
  transition: all 0.3s ease-out;
}
.logos-box>li>img:hover {
  opacity: 1
}
#contact-form-holder {
  width: 90%;
  margin: 20px auto;
  max-width: 800px;
  font-size: 17px;
}
#contact-form-holder textarea, #contact-form-holder input[type=text], #contact-form-holder input[type=email] {
  background: #f8f8f8;
  border: none;
  margin: 3px auto 0px;
  box-shadow: none;
  padding: 12px 15px;
  font-size: 17px;
}
#contact-form-holder textarea {
  margin: 40px 0px;
}
#hello-zone-cu {
  padding-top: 40px;
}
#hello-zone-cu img {
  width: 100px;
}
#form-social-block,.form-social-block {
  text-align: center;
  margin-top: 30px;
  margin-bottom: 30px;
}
#form-social-block img,.form-social-block img {
  width: 35px;
  margin-left: 15px;
}
.form-title {
  font-size: 1.1em;
  padding-bottom: 3px;
  border-bottom: 1px solid #ccc;
  display: inline-block;
}
.cu-form-eorror {
  height: 25px;
  text-align: left;
  text-shadow: none;
}
.ak-checkbox-pannel>li {
  text-align: left;
  margin-top: 16px;
}
.ak-cb-depth {
  width: 15px;
  height: 15px;
  display: inline-block;
  vertical-align: middle;
  margin-left: 20px;
}
.ak-cb-depth-inner {
  width: 15px;
  height: 15px;
  border: 1px solid #444;
  vertical-align: middle;
}

.ak-checkbox-pannel>li.active .ak-cb-depth{
  background: #62B0DD;
}

.ak-cb-title {
  display: inline-block;
  margin-left: 7%;
}
#ak-dotted-circle {
  animation-duration: 14s;
  animation-name: radarrotate;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  width: 90%;
  max-width: 400px;
}
#scan-process-list {
  padding-top: 90px;
}
#radar-list-block {
}
#radar-list-block>span {
  display: none;
  font-size: 1em;
  padding-bottom: 2px
}
.innerZoneScan {
  text-align: left;
}
#radar-img-zone {
  margin-bottom: 60px;
}
#scan-process-list .icon {
  margin-top: 5px;
  margin-bottom: 10px;
}
#scan-process-list .icon {
  display: inline-block;
  width: 22%;
  vertical-align: top
}
#scan-process-list .icon img {
  width: 70px;
  display: inline-block;
  margin-right: 10px;
}
#uploadAppZone .desc-text, #scReportZone .desc-text{
  width:100% !important;
}

#scReportZone{
    padding-left: 50px;
}

#scan-process-list .desc-text {
  background: #FFF;
  color: #666;
  display: inline-block;
  width: 75%;
  vertical-align: top
}
#scan-process-list .desc-title {
  background: #FFF;
}
#scan-process-list .title {
  background: #FFF;
}
#scan-process-list .titleZone h3, #scan-process-list .titleZone h4 {
  display: inline-block;
  width: 22%;
  vertical-align: top;
  margin-top: 0px;
}
#scan-process-list .titleZone h4 {
  width: 72%;
}
#home-video-zone {
  border: 3px solid #616060;
  border-radius: 5px;
  box-shadow: 2px 3px 4px #ccc;
  max-width: 90% !important;
  background: #fff;
  padding: 0;
}

#uploadAppZone{margin-top:30px;}

#SASTZone .title{margin-top:0px;}

#DASTZone .title{margin-top:0px;}

#scReportZone{display:block !important;margin-top:30px;}

#DASTZone{margin-top:60px;}
#SASTZone{margin-top:60px;}

#DASTZone .title{margin-top:-10px;}
#UBAZone{margin-top: 60px;text-align:right;}

#whySheildZone{
	margin-top:130px;
}

#SASTZone .title {
  margin-top: 0px;
}
#DASTZone .title {
  margin-top: 0px;
}
#scReportZone {
  display: block !important;
  margin-top: 30px;
}
#DASTZone {
  margin-top: 60px;
}
#SASTZone {
  margin-top: 60px;
}
#DASTZone .title {
  margin-top: -10px;
}
#UBAZone {
  margin-top: 60px;
  text-align: right;
}
#whySheildZone {
  margin-top: 130px;
}
#awards-box {
  margin: -30px 0 80px 0;
}
#awards-box>li {
  margin-top: 50px;
  margin-bottom: 20px
}
.awards-image {
  text-align: center
}
.awards-image>img {
  text-align: center;
  width: 170px;
  height: 170px;
  border-radius: 85px;
  opacity: 0.8;
  transition: all 0.35s ease-out;
}
.testimony-container {
  padding-top: 130px;
  padding-bottom: 150px;
}
#swiggyLogo {
  width: 62%;
}
.awards-image>img:hover {
  opacity: 1;
  border-radius: 45px;
}
.why-appknox {
  text-align: left;
  padding-top: 75px;
}
.why-appknox h2 {
  text-align: center
}
.contact-us-block {
  padding-top: 30px;
  padding-bottom: 60px;
}
.contact-us-block .cubtn{
  display: inline-block;
  margin-top: 30px;
}
#footer-form input {
  display: inline-block
}
.footer-links {
  text-align: center;
  font-size: 1.2em;
  margin-top: 25px;
}
.footer-links a {
  display: inline-block;
  margin-left: 30px;
  margin-top: 10px;
}
/* ... */

